--- a/package.json
+++ b/package.json
@@ -7,12 +7,31 @@
     "url": "https://github.com/albertBuenaventura/typescript-ddd-skeleton"
   },
   "author": "Albert C. Buenaventura",
+  "dependencies": {
+    "@types/express": "^4.17.1",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.141",
+    "@types/node": "^12.7.8",
+    "axios": "^0.19.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "jest": "^24.9.0",
+    "lodash": "^4.17.15",
+    "nodemon": "^1.19.3",
+    "redis": "^2.8.0",
+    "sequelize": "^5.19.2",
+    "ts-node": "^8.4.1",
+    "typescript": "3.7.x",
+    "winston": "^3.2.1"
+  },
   "devDependencies": {
-    "@types/node": "^10.14.13",
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
-    "eslint": "~6.6.0",
-    "ts-node": "^8.4.1",
-    "typescript": "3.7.x"
+    "eslint": "~6.6.0"
   }
 }
