--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "sourceMap": true,
       "strict": true,
       "strictPropertyInitialization": false,
-      "target": "es6"
+      "target": "es6",
+      "pretty": true
     },
     "include": ["src/**/*"],
     "exclude": [
