--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
     "compilerOptions": {
-      "allowUnreachableCode": false,
       "baseUrl": ".",
+      "strict": true,
       "module": "commonjs",
       "moduleResolution": "node",
       "noEmitOnError": true,
       "noFallthroughCasesInSwitch": true,
       "outDir": "./dist",
       "sourceMap": true,
-      "strict": true,
+      "noUnusedParameters" : true,
       "strictPropertyInitialization": false,
       "target": "es6",
-      "pretty": true
     },
     "include": ["src/**/*"],
     "exclude": [
