--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.141",
     "@types/node": "^12.7.8",
     "axios": "^0.19.0",
