--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/jest": "^24.0.18",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.141",
+    "@types/mongodb": "^3.3.16",
     "@types/node": "^12.7.8",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
@@ -24,6 +25,7 @@
     "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mongodb": "^3.5.3",
     "nodemon": "^1.19.3",
     "redis": "^2.8.0",
     "sequelize": "^5.19.2",
