--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/lodash": "^4.14.141",
     "@types/mongodb": "^3.3.16",
     "@types/node": "^12.7.8",
+    "awilix": "^4.2.4",
+    "awilix-express": "^3.0.0",
     "axios": "^0.19.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
@@ -38,5 +40,8 @@
     "@typescript-eslint/eslint-plugin": "^2.7.0",
     "@typescript-eslint/parser": "^2.7.0",
     "eslint": "~6.6.0"
+  },
+  "engines": {
+    "node": ">=7.6.0"
   }
 }
