Set environment variable for development

--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 APP_SECRET="secret_nga_eh"
 TOKEN_API_EXPIRATION=300
-MONGO_IP=
-MONGO_PORT=
-MONGO_DB_NAME=
+MONGO_IP=localhost
+MONGO_PORT=27017
+MONGO_DB_NAME=ddd-sample
