--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "Albert C. Buenaventura",
   "scripts": {
-    "start" : "nodemon ./src/index.ts"
+    "start": "nodemon ./src/index.ts",
+    "lint": "eslint . --ext .ts"
   },
   "dependencies": {
     "@types/express": "^4.17.1",
@@ -38,9 +39,9 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
-    "@typescript-eslint/eslint-plugin": "^2.7.0",
-    "@typescript-eslint/parser": "^2.7.0",
-    "eslint": "~6.6.0"
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "eslint": "^6.6.0"
   },
   "engines": {
     "node": ">=7.6.0"
