--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "author": "Albert C. Buenaventura",
   "scripts": {
     "start": "nodemon ./src/index.ts",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc ./src/**/*.ts --write"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint"
+    }
   },
   "dependencies": {
     "@types/express": "^4.17.1",
@@ -41,7 +47,11 @@
     "@types/cors": "^2.8.6",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "prettier": "^2.0.5"
   },
   "engines": {
     "node": ">=7.6.0"
